fixed vertical align

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@ body{
     margin: 30px 100px 0;
 }
 /* HEADER */
+header>h1{
+    padding: 20px 0 50px;
+}
 /* SOTTO-HEADER */
 /* ETICHETTE PROFILI */
 
@@ -35,12 +38,12 @@ body{
     color: white;
     width: 100%;
     display: inline-block;
-    vertical-align: middle;
+    line-height: 20px;
+    margin: calc(100% / 9 - 20px);
 }
 .contacts :first-child{
     font-size: 18px;
     font-weight: 500;
-    padding: ;
 }
 
 .img{
